[project]
name = "quantum-circuit-lab"
version = "1.0.0"
description = "Interactive Qiskit-powered quantum circuit builder with statevector simulation"
authors = [
    { name = "Eren Bozkurt" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["quantum-computing", "qiskit", "statevector", "quantum-circuits", "qml", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qiskit>=2.0.0",
    "qiskit-aer>=0.15.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Repository = "https://github.com/<YOUR-USERNAME>/quantum-circuit-lab"
Issues = "https://github.com/<YOUR-USERNAME>/quantum-circuit-lab/issues"

[project.scripts]
qclab = "app:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
